2nd training/Community/Community/Community1/force-app/main/default/objects/Raffles__c/Raffles__c.object-meta.xml
<CustomObject>
    <label>Raffles</label>
    <nameField>
        <label>Article Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Raffles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>