2nd training/Community/Community/Community1/force-app/main/default/objects/Raffles__c/fields/Amount_Transacted__c.field-meta.xml
<CustomField>
    <fullName>Amount_Transacted__c</fullName>
    <label>Amount Transacted</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>