2nd training/Community/Community/Community1/force-app/main/default/objects/Raffles__c/fields/Article_Group__c.field-meta.xml
<CustomField>
    <fullName>Article_Group__c</fullName>
    <label>Article Group</label>
    <length>99</length>
    <type>Text</type>
</CustomField>