2nd training/Community/Community/Community1/force-app/main/default/objects/Raffles__c/fields/Article_No__c.field-meta.xml
<CustomField>
    <fullName>Article_No__c</fullName>
    <label>Article No.</label>
    <length>9</length>
    <type>Text</type>
</CustomField>