2nd training/Community/Community/Community1/force-app/main/default/objects/Raffles__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <formula>Amount_Transacted__c +  Last_stock_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Working</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>