2nd training/Community/Community/Community1/force-app/main/default/objects/Raffles__c/fields/Cartons__c.field-meta.xml
<CustomField>
    <fullName>Cartons__c</fullName>
    <label>Cartons</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>