2nd training/Community/Community/Community1/force-app/main/default/objects/Raffles__c/fields/Colour__c.field-meta.xml
<CustomField>
    <fullName>Colour__c</fullName>
    <label>Colour</label>
    <length>30</length>
    <type>Text</type>
</CustomField>