2nd training/Community/Community/Community1/force-app/main/default/objects/Raffles__c/fields/Last_stock_Qty__c.field-meta.xml
<CustomField>
    <fullName>Last_stock_Qty__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Balance Qty</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>