2nd training/Community/Community/Community1/force-app/main/default/objects/Raffles__c/fields/Last_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Transaction_Date__c</fullName>
    <label>Last Transaction Date</label>
    <type>Date</type>
</CustomField>