2nd training/Community/Community/Community1/force-app/main/default/objects/Raffles__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <length>9</length>
    <type>Text</type>
</CustomField>