2nd training/Community/Community/Community1/force-app/main/default/objects/Raffles__c/fields/Qty_Issued__c.field-meta.xml
<CustomField>
    <fullName>Qty_Issued__c</fullName>
    <label>Qty Issued</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>