2nd training/Community/Community/Community1/force-app/main/default/objects/Raffles__c/fields/Quantity_Requested__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Requested__c</fullName>
    <label>Qty Requested</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>