2nd training/Community/Community/Community1/force-app/main/default/objects/Raffles__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <length>20</length>
    <type>Text</type>
</CustomField>